--- a/Task_01_HTML_CSS/grid vs flex/flex/style.css
+++ b/Task_01_HTML_CSS/grid vs flex/flex/style.css
@@ -1,17 +1,36 @@
-.container {
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+.card-container {
+    margin-top: 20px;
+}
+
+.card-row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 0;
-    font-family: Montserrat;
+    justify-content: center;
+    gap: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .card {
     width: 200px;
     background-color: #f0f0f0;
-    margin: 20px;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 7px;
+    -webkit-box-shadow: 5px 5px 6px 0px rgba(35, 51, 63, 0.18);
+    -moz-box-shadow: 5px 5px 6px 0px rgba(35, 51, 63, 0.18);
+    box-shadow: 5px 5px 6px 0px rgba(35, 51, 63, 0.18);
+    font-family: Montserrat;
+    font-size: 14px;
     flex-grow: 2;
+}
+
+.card-title {
+    margin-bottom: 20px;
 }
