--- a/Task_01_HTML_CSS/bem-scss/scss/style.scss
+++ b/Task_01_HTML_CSS/bem-scss/scss/style.scss
@@ -26,15 +26,11 @@ body {
   text-align: center;
   h1 {
     font: $font-main-header;
+    // line-height: 40px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid $primary-color;
   }
-  hr {
-    border: 0;
-    clear: both;
-    display: block;            
-    background-color: $primary-color;
-    height: 1px;
-    width: 5%;
-  }
+
   p {
     font: $font-text;
   }
@@ -55,8 +51,25 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    // margin: 0 20px;
-    .card__img__container {
+
+    @media (min-width: 1024px) {
+      .line {
+        height: 1.5px;
+        width: 35%;
+        position: relative;
+        background-color: #d8d8d8;
+      }
+      .line-left {
+        top: 50px;
+        right: 150px;
+      }
+      .line-right {
+        top: -50px;
+        right: -150px;
+      }
+    }
+    
+    .card__img-container {
       width: 100px;
       height: 100px;
       border: 1px solid #d8d8d8;
