Task_02 search and filter some fixes

--- a/Task_02_JavaScript/search_and_filter/scss/style.scss
+++ b/Task_02_JavaScript/search_and_filter/scss/style.scss
@@ -11,6 +11,10 @@ body {
     justify-content: center;
 }
 
+#no {
+    display: none;
+}
+
 .filter {
     display: flex;
     flex-direction: column;
