--- a/Task_02_JavaScript/Slider/scss/style.scss
+++ b/Task_02_JavaScript/Slider/scss/style.scss
@@ -1,69 +1,84 @@
-// $font-text: calc(12px + 0.5vw) Montserrat;
-// $font-main-header: 800 calc(22px + 0.5vw) Montserrat;
-// $font-card-header: 600 calc(18px + 0.5vw) Montserrat;
 $primary-color: #333;
-$active-btn-border: 2px solid $primary-color;
-$inactive-btn-border: 2px solid #C0C0C0;
+$active-btn-border: 1px solid $primary-color;
+$inactive-btn-border: 1px solid #C0C0C0;
 
 body {
-  color: $primary-color;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 70vw;
+    position: relative;
+}
+  
+.slider {
+    overflow: auto;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    .content {
+        display: grid;
+        grid-gap: 16px;
+        grid-auto-flow: column;
+        margin: auto;
+        box-sizing: border-box;
+    }
+    .slider__image {
+        width: 15vw;
+        background: #fff;
+        border-radius: 1vw;
+    }
+}
+.slider::-webkit-scrollbar {
+    height: 0;
 }
 
-.slider {
-    display: flex;
-    flex-direction: column;
-    // flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    // margin: 40px;
-    gap: 10px;
+.slider__button-prev,
+.slider__button-next {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    width: 5vw;
+    height: 5vw;
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 0px 9px 3px rgba(51, 51, 51, 0.2);
+    -moz-box-shadow: 0px 0px 9px 3px rgba(51, 51, 51, 0.2);
+    box-shadow: 0px 0px 9px 3px rgba(51, 51, 51, 0.2);
+    outline: none;
+}
+  
+.slider__button-prev {
+    top: 50%;
+    left: -15%;
+    transform: translate(50%, -50%);
+}
+  
+.slider__button-next {
+    top: 50%;
+    right: -15%;
+    transform: translate(-50%, -50%);
+}
 
-    .slider__image {
-        width: 70%;
-        border-radius: 3%;
-    }
+.slider__button-prev:enabled {
+    background: #ffffff url("../../assets/images/prev.png") no-repeat center / 50% 50%;
+    border: $active-btn-border;
+}
+.slider__button-prev:disabled {
+    background: #ffffff url("../../assets/images/prev_inactive.png") no-repeat center / 50% 50%;
+    border: $inactive-btn-border;
+}
 
-    .slider__buttons {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 3vw;
-        button {
-            width: 5vw;
-            height: 5vw;
-            border-radius: 50%;
-            -webkit-box-shadow: 0px 0px 9px 3px rgba(51, 51, 51, 0.2);
-            -moz-box-shadow: 0px 0px 9px 3px rgba(51, 51, 51, 0.2);
-            box-shadow: 0px 0px 9px 3px rgba(51, 51, 51, 0.2);
-            outline: none;
-        }
-        .slider__button-prev:enabled {
-            background: #ffffff url("../../assets/images/prev.png") no-repeat center / 50% 50%;
-            border: $active-btn-border;
-        }
-        .slider__button-prev:disabled {
-            background: #ffffff url("../../assets/images/prev_inactive.png") no-repeat center / 50% 50%;
-            border: $inactive-btn-border;
-        }
+.slider__button-next:enabled {
+    background: #ffffff url("../../assets/images/next.png") no-repeat center / 50% 50%;
+    border: $active-btn-border;
+}
 
-        .slider__button-next:enabled {
-            background: #ffffff url("../../assets/images/next.png") no-repeat center / 50% 50%;
-            border: $active-btn-border;
-        }
-
-        .slider__button-next:disabled {
-            background: #ffffff url("../../assets/images/next_inactive.png") no-repeat center / 50% 50%;
-            border: $inactive-btn-border;
-        }
-    }
+.slider__button-next:disabled {
+    background: #ffffff url("../../assets/images/next_inactive.png") no-repeat center / 50% 50%;
+    border: $inactive-btn-border;
 }
