Task_02 slider fixed width

--- a/Task_02_JavaScript/Slider/css/style.css
+++ b/Task_02_JavaScript/Slider/css/style.css
@@ -8,10 +8,15 @@ body {
 }
 
 .container {
-  width: 70vw;
+  width: 500px;
   position: relative;
 }
 
+@media (min-width: 320px) and (max-width: 430px) {
+  .container {
+    width: 250px;
+  }
+}
 .slider {
   overflow: auto;
   scroll-behavior: smooth;
@@ -61,6 +66,30 @@ body {
   transform: translate(-50%, -50%);
 }
 
+@media (min-width: 1024px) {
+  .slider__button-prev {
+    left: -20%;
+  }
+  .slider__button-next {
+    right: -20%;
+  }
+}
+@media (min-width: 1440px) {
+  .slider__button-prev {
+    left: -25%;
+  }
+  .slider__button-next {
+    right: -25%;
+  }
+}
+@media (min-width: 2560px) {
+  .slider__button-prev {
+    left: -45%;
+  }
+  .slider__button-next {
+    right: -45%;
+  }
+}
 .slider__button-prev:enabled {
   background: #ffffff url("../../assets/images/prev.png") no-repeat center/50% 50%;
   border: 1px solid #333;
